# ten-framework

./: .coderabbit.yaml  .gitattributes  .gitignore  BUILD.gn  README.md
core/src/ten_rust/: BUILD.gn
core/src/ten_rust/src/: bindings.rs
core/src/ten_rust/src/constants/: mod.rs
core/src/ten_rust/src/graph/: graph_info.rs  mod.rs  reverse.rs  selector.rs  subgraph.rs
core/src/ten_rust/src/graph/connection/: mod.rs
core/src/ten_rust/src/graph/node/: mod.rs
core/src/ten_rust/src/graph/subgraph/: flatten.rs  mod.rs
core/src/ten_rust/src/json_schema/data/: manifest.schema.json  property.schema.json  shared-definitions.schema.json
core/src/ten_rust/src/log/: decrypt.rs  encryption.rs  mod.rs
core/src/ten_rust/src/pkg_info/: mod.rs
core/src/ten_rust/src/pkg_info/manifest/: api.rs  interface.rs  mod.rs
core/src/ten_rust/src/schema/: store.rs
core/src/ten_rust/src/utils/: path.rs
core/src/ten_rust/tests/test_case/: graph_check.rs  path.rs
core/src/ten_rust/tests/test_case/graph/: exposed_message.rs  flatten_integration.rs  import_uri.rs  selector.rs  subgraph.rs
core/src/ten_rust/tests/test_case/log/: mod.rs
tests/ten_runtime/integration/: BUILD.gn
tests/ten_runtime/integration/cpp/: BUILD.gn
tests/ten_runtime/integration/cpp/check_start_graph/check_start_graph_app/: manifest.json
tests/ten_runtime/integration/cpp/ffmpeg_basic/ffmpeg_basic_app/: manifest.json
tests/ten_runtime/integration/cpp/ffmpeg_bypass/ffmpeg_bypass_app/: manifest.json
tests/ten_runtime/integration/cpp/graph_env_var_1/graph_env_var_1_app/: manifest.json
tests/ten_runtime/integration/cpp/graph_env_var_2/graph_env_var_2_app/: manifest.json
tests/ten_runtime/integration/cpp/graph_env_var_3/graph_env_var_3_app/: manifest.json
tests/ten_runtime/integration/cpp/graph_env_var_4/graph_env_var_4_app/: manifest.json
tests/ten_runtime/integration/cpp/hello_world/hello_world_app/: manifest.json
tests/ten_runtime/integration/cpp/import_graph/import_graph_app/: manifest.json
tests/ten_runtime/integration/cpp/interface_schema_check/interface_schema_check_app/: manifest.json
tests/ten_runtime/integration/cpp/interface_schema_check_2/: BUILD.gn  test_case.py
tests/ten_runtime/integration/cpp/interface_schema_check_2/interface_schema_check_2_app/: manifest.json
tests/ten_runtime/integration/cpp/large_result/large_result_app/: manifest.json
tests/ten_runtime/integration/cpp/long_running/long_running_app/: manifest.json
tests/ten_runtime/integration/cpp/metadata_additional_field/metadata_additional_field_app/: manifest.json
tests/ten_runtime/integration/cpp/multi_apps/app_1/: manifest.json
tests/ten_runtime/integration/cpp/multi_apps/app_2/: manifest.json
tests/ten_runtime/integration/cpp/restful/restful_app/: manifest.json
tests/ten_runtime/integration/cpp/standalone_test_cpp/ext/: manifest.json
tests/ten_runtime/integration/go/: BUILD.gn
tests/ten_runtime/integration/go/access_property_go/access_property_go_app/: manifest.json
tests/ten_runtime/integration/go/call_api_after_deinited_go/call_api_after_deinited_go_app/: manifest.json
tests/ten_runtime/integration/go/call_api_during_deiniting_go/call_api_during_deiniting_go_app/: manifest.json
tests/ten_runtime/integration/go/close_app_cmd_go/close_app_cmd_go_app/: manifest.json
tests/ten_runtime/integration/go/close_app_go/close_app_go_app/: manifest.json
tests/ten_runtime/integration/go/exit_signal_go/exit_signal_go_app/: manifest.json
tests/ten_runtime/integration/go/expired_ten_go/expired_ten_go_app/: manifest.json
tests/ten_runtime/integration/go/failed_to_create_extension_go/failed_to_create_extension_go_app/: manifest.json
tests/ten_runtime/integration/go/frequently_cgo_call_go/frequently_cgo_call_go_app/: manifest.json
tests/ten_runtime/integration/go/handle_error_go/handle_error_go_app/: manifest.json
tests/ten_runtime/integration/go/leak_check_go/leak_check_go_app/: manifest.json
tests/ten_runtime/integration/go/local_dependency_1_go/local_dependency_1_go_app/: manifest.json
tests/ten_runtime/integration/go/local_dependency_2_go/local_dependency_2_go_app/: manifest.json
tests/ten_runtime/integration/go/msg_clone_go/msg_clone_go_app/: manifest.json
tests/ten_runtime/integration/go/no_dest_go/no_dest_go_app/: manifest.json
tests/ten_runtime/integration/go/prepare_to_stop_go/prepare_to_stop_go_app/: manifest.json
tests/ten_runtime/integration/go/return_result_go/return_result_go_app/: manifest.json
tests/ten_runtime/integration/go/return_value_go/return_value_go_app/: manifest.json
tests/ten_runtime/integration/go/send_audio_frame_go/send_audio_frame_go_app/: manifest.json
tests/ten_runtime/integration/go/send_data_go/send_data_go_app/: manifest.json
tests/ten_runtime/integration/go/set_dest_go/set_dest_go_app/: manifest.json
tests/ten_runtime/integration/go/standalone_test_2_go/default_extension_go/: manifest.json
tests/ten_runtime/integration/go/start_app_sync_go/start_app_sync_go_app/: manifest.json
tests/ten_runtime/integration/go/start_graph_and_communicate_go/: BUILD.gn  test_case.py
tests/ten_runtime/integration/go/start_graph_and_communicate_go/start_graph_and_communicate_go_app/: manifest.json  property.json
tests/ten_runtime/integration/go/start_graph_and_set_dests_from_new_graph_go/start_graph_and_set_dests_from_new_graph_go_app/: manifest.json
tests/ten_runtime/integration/go/start_graph_go/start_graph_go_app/: manifest.json
tests/ten_runtime/integration/go/trigger_life_cycle_go/: BUILD.gn  test_case.py
tests/ten_runtime/integration/nodejs/: BUILD.gn
tests/ten_runtime/integration/nodejs/start_graph_and_communicate_nodejs/: BUILD.gn  test_case.py
tests/ten_runtime/integration/nodejs/trigger_life_cycle_nodejs/: BUILD.gn  test_case.py
tests/ten_runtime/integration/python/: BUILD.gn
tests/ten_runtime/integration/python/start_graph_and_communicate_python/: BUILD.gn  test_case.py
tests/ten_runtime/integration/python/trigger_life_cycle_python/: BUILD.gn  __init__.py  test_case.py
(+789 files in other folders)
